[package]
name = "send_slack"
version = "0.1.0"
edition = "2021"
authors = ["https://twitter.com/8bitTD", "8bittd@gmail.com"]
repository = "https://github.com/8bitTD/send_slack"
keywords = ["windows", "slack"]
license = "MIT"
readme = "README.md"
description = "send message to slack in windows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding = "1.1.1"